<resources>
    <string name="app_name">Expenditrack</string>
    <string-array name="category_array">
        <item>Fashion</item>
        <item>Travel</item>
        <item>Books/Music/Stationary</item>
        <item>IT/Mobile</item>
        <item>Events</item>
        <item>Electronics</item>
        <item>Furniture</item>
        <item>Video-Games/Accessories</item>
        <item>Personal Care/Beauty</item>
        <item>Take-Aways/Restaurants</item>
        <item>Household Cleaning</item>
        <item>Groceries</item>
        <item>Health care</item>
        <item>Baby Care</item>
        <item>Alcohol</item>
        <item>Pet Food/Supplies</item>
        <item>Other</item>
    </string-array>
    <string-array name="seQuestionArray">
        <item>Choose a security question</item>
        <item>What is your mothers maiden name?</item>
        <item>What was the name of your first pet?</item>
        <item>What is the name of your childhood best friend?</item>
        <item>What is your favourite operating system?</item>
    </string-array>
    <string name="title_activity_view_pie_charts">view_pie_charts</string>
    <string name="home">Home</string>
    <string name="view_receipts">View Receipts</string>
    <string name="view_graphs">View Graphs</string>
    <string name="add_receipt_voice">Add Receipt (Voice)</string>
    <string name="scan_image">Scanning Image</string>
    <string name="date_of_purchase">Date of Purchase</string>
    <string name="total_spent">Total Spent</string>
    <string name="buyer">Buyer</string>
    <string name="confirm">Confirm</string>
    <string name="manage_receipt">Manage Receipt</string>
    <string name="login">Login</string>
    <string name="welcome_to_expenditrack">Welcome to Expenditrack</string>
    <string name="email">Email</string>
    <string name="pword">Password</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register_for_expenditrack">Register for Expenditrack</string>
    <string name="answer">Answer</string>
    <string name="already_reg">User already registered</string>
    <string name="unable_to_load">Unable to load database</string>
    <string name="error_inputs">Error on inputs</string>
    <string name="username">Username</string>
    <string name="user_add_success">User added succesfully</string>
    <string name="fail_to_add_user">Failed to add user</string>
    <string name="success_login">Login successful</string>
    <string name="access_down">Access to database is down</string>
    <string name="retrieve_password">Retrieve Password</string>
    <string name="sec_answer">Security Question Answer</string>
    <string name="retrieve_question">Retrieve Question</string>
    <string name="security_question">Security Question</string>
    <string name="question_retrieve">Unable to retrieve question</string>
    <string name="all_fields">All fields must be filled</string>
    <string name="addReceiptCamera"> Add Receipt (Camera) </string>
    <string name="add_receipt_gallery">Add Receipt (Gallery)</string>
    <string name="choose_method">Choose method to add a receipt</string>
    <string name="galleryWord">Gallery</string>
    <string name="cameraWord">Camera</string>
    <string name="voiceWord">Voice</string>
    <string name="unable_to_load_user">Unable to load users</string>
    <string name="unable_to_load_receipta">unable to load receipts</string>
    <string name="cant_write_receipt">cannot write receipt</string>
    <string name="personal_homepage">Personal Homepage</string>
    <string name="username_here">Username here</string>
    <string name="add_receipt_cam">Add Receipt (Cam)</string>
    <string name="welcome">Welcome</string>
    <string name="select_a_style_of_graph">Select a style of graph</string>
    <string name="spends_all_time">Spends All Time</string>
    <string name="top_4">Top 4</string>
    <string name="add_more_receipts">Add more receipts</string>
    <string name="not_enough_receipts">Not enough receipts to generate graphs</string>
    <string name="sign_out">Sign Out</string>
    <string name="signed_out">signed out!</string>
    <string name="problem_image">Problem with image, please try again</string>
    <string name="unable_add_user">Unable to add user</string>
    <string name="added">Receipt Added</string>
    <string name="edited">Receipt Edited</string>
    <string name="cant_load">Cannot load receipts</string>
    <string name="issure_adding">Issue adding receipt</string>
    <string name="all_fields_please">Please fill all fields</string>
    <string name="enter_number">Please enter a number for Total</string>
    <string name="add_receipt_manual">Add Receipt (Manual)</string>
</resources>
