<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
        android:id="@+id/views">
        <item
            android:id="@+id/home"
            android:icon="@mipmap/ic_home"
            android:title="@string/home"
            />
        <item
            android:id="@+id/viewReceipts"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/view_receipts"
            />
        <item
            android:id="@+id/viewGraphs"
            android:icon="@drawable/ic_pie_chart_black_24dp"
            android:title="@string/view_graphs"
            />

    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/add">

        <item
            android:id="@+id/speechAdd"
            android:icon="@drawable/ic_mic_black_24dp"
            android:title="@string/add_receipt_voice"
            />

        <item
            android:id="@+id/cameraAdd"
            android:icon="@drawable/ic_photo_camera_black_24dp"
            android:title="@string/addReceiptCamera"
            />

        <item
        android:id="@+id/galleryAdd"
        android:icon="@drawable/ic_photo_library_black_24dp"
        android:title="@string/add_receipt_gallery"
        />

        <item
            android:id="@+id/manualAdd"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/add_receipt_manual"
            />

    </group>
</menu>